--- a/preamble.tex
+++ b/preamble.tex
@@ -41,6 +41,7 @@
 \theoremstyle{definition}
 \newtheorem{definition}[theorem]{Definition}
 \newtheorem{setup}[theorem]{Setup}
+\newtheorem{example}[theorem]{Example}
 
 %remark style environments
 \theoremstyle{remark}
