--- a/aip.tex
+++ b/aip.tex
@@ -1766,8 +1766,7 @@ Since this intersection is a compact set, $\feas\fip_p(A,\vv{u})$ is also compac
  \end{pmatrix} 
 \text{ and } \vv{u} = \begin{pmatrix} 1 \\ 1 \\ 1 \\ \end{pmatrix}.
 \]
-Figure \ref{fig: feas fip}
-
+In \Cref{fig: feas fip}, the feasible set for the problem is shown in red, and the optimal set is highlighted in green, for small values of $p$.  
 \end{example}
 
 
